--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^8.1",
-    "illuminate/console": "^10.0|^11.0",
-    "illuminate/database": "^10.0|^11.0",
-    "illuminate/support": "^10.0|^11.0",
+    "illuminate/console": "^10.0|^11.0|^12.0",
+    "illuminate/database": "^10.0|^11.0|^12.0",
+    "illuminate/support": "^10.0|^11.0|^12.0",
     "filament/filament": "^3.2",
     "filament/support": "^3.2",
     "spatie/laravel-package-tools": "^1.16.1"
