--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "illuminate/console": "^10.0|^11.0|^12.0",
     "illuminate/database": "^10.0|^11.0|^12.0",
     "illuminate/support": "^10.0|^11.0|^12.0",
-    "filament/filament": "^3.2",
-    "filament/support": "^3.2",
+    "filament/filament": "^3.2|^4.0",
+    "filament/support": "^3.2|^4.0",
     "spatie/laravel-package-tools": "^1.16.1"
   },
   "extra": {
